Fixed errors in baseline model nb

--- a/_notebooks/2020-03-29-Building an image classifier using Fastai V2.ipynb
+++ b/_notebooks/2020-03-29-Building an image classifier using Fastai V2.ipynb
@@ -23,6 +23,10 @@
     "\n",
     "I would like to start these series of posts with an introduction to the [fastai v2](http://dev.fast.ai) library in the application of vision, which is arguably the most common application in the field, and definitely, the most worked on. \n",
     "\n",
+    "---\n",
+    "\n",
+    "***Update:*** The follow-up post to this one can be found [here](https://harish3110.github.io/through-tinted-lenses/fastai/image%20classification/model%20fine-tuning/2020/04/10/Improving-baseline-model.html) where I employ Fastai techniques with an aim to build a SOTA model. \n",
+    "\n",
     "---"
    ]
   },
@@ -1525,7 +1529,10 @@
    "source": [
     "We'll slowly build upon this and make this model better while learning more about building state-of-the-art models in the upcoming posts.\n",
     "\n",
-    "***Update:*** The upcoming post to this can be found [here](https://harish3110.github.io/through-tinted-lenses/fastai/image%20classification/model%20fine-tuning/2020/04/10/Improving-baseline-model.html) where I employ Fastai techniques with an aim to build a SOTA model. "
+    "---\n",
+    "***Update:*** The follow-up post to this one can be found [here](https://harish3110.github.io/through-tinted-lenses/fastai/image%20classification/model%20fine-tuning/2020/04/10/Improving-baseline-model.html) where I employ Fastai techniques with an aim to build a SOTA model. \n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -1541,8 +1548,7 @@
     "\n",
     "4. [Fastbook](https://github.com/fastai/fastbook) i.e Deep Learning for Coders with Fastai and Pytorch: AI Applications Without a PhD by Jeremy Howard and Sylvain Gugger\n",
     "\n",
-    "5. [Fastai DataBlock API walkthrough](https://t.co/b1ZFLpJ1DN?amp=1) blog by [Zach Mueller]\n",
-    "(https://forums.fast.ai/u/muellerzr/summary)\n",
+    "5. [Fastai DataBlock API walkthrough](https://t.co/b1ZFLpJ1DN?amp=1) blog by [Zach Mueller](https://forums.fast.ai/u/muellerzr/summary)\n",
     "\n",
     "6. [Super-Convergence: Very Fast Training of Neural Networks Using Large Learning Rates](https://arxiv.org/abs/1708.07120) paper by Leslie Smith\n",
     "\n",
