--- a/_notebooks/2020-03-29-Building an image classifier using Fastai V2.ipynb
+++ b/_notebooks/2020-03-29-Building an image classifier using Fastai V2.ipynb
@@ -12,7 +12,7 @@
     "- badges: true\n",
     "- comments: true\n",
     "- author: Harish Vadlamani\n",
-    "- categories: [fastai, image classification]\n"
+    "- categories: [Computer Vision, Image Classification]\n"
    ]
   },
   {
@@ -1583,7 +1583,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
