Minor changes to NLP post

--- a/_notebooks/2020-06-27-Introduction to NLP using Fastai2.ipynb
+++ b/_notebooks/2020-06-27-Introduction to NLP using Fastai2.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "# Introduction to NLP using Fastai2\n",
     "> Implementing the [ULMFiT](https://arxiv.org/abs/1801.06146) approach to train a language model on any downstream NLP task.\n",
     "\n",
@@ -12,7 +13,9 @@
     "- badges: true\n",
     "- comments: true\n",
     "- author: Harish Vadlamani\n",
-    "- categories: [Natural Language Processing, Sentiment Analysis]"
+    "- categories: [Natural Language Processing, Sentiment Analysis]\n",
+    "\n",
+    "---"
    ]
   },
   {
