--- a/_notebooks/2020-04-03-A look at the L Data Structure in Fastai.ipynb
+++ b/_notebooks/2020-04-03-A look at the L Data Structure in Fastai.ipynb
@@ -12,7 +12,7 @@
     "- badges: true\n",
     "- comments: true\n",
     "- author: Harish Vadlamani\n",
-    "- categories: [fastai, data structures]\n"
+    "- categories: [Data Structures]\n"
    ]
   },
   {
@@ -2282,7 +2282,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
