Minor changes to NLP post

--- a/_notebooks/2020-06-27-Introduction to NLP using Fastai.ipynb
+++ b/_notebooks/2020-06-27-Introduction to NLP using Fastai.ipynb
@@ -1043,14 +1043,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](https://www.fast.ai/images/kittenavalanche.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In the above embediing layer learned, vectors for baby animal words are closer together, and an unrelated word like 'avalanche' is further away"
+    "![](https://www.fast.ai/images/kittenavalanche.png \"In the above embediing layer learned, vectors for baby animal words are closer together, and an unrelated word like 'avalanche' is further away\")"
    ]
   },
   {
