Minor changes to NLP post

--- a/_notebooks/2020-06-27-Introduction to NLP using Fastai.ipynb
+++ b/_notebooks/2020-06-27-Introduction to NLP using Fastai.ipynb
@@ -1712,7 +1712,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Kaggle Submission"
+    "## Creating a Kaggle submission file"
    ]
   },
   {
