Minor changes to NLP post

--- a/_notebooks/2020-06-27-Introduction to NLP using Fastai.ipynb
+++ b/_notebooks/2020-06-27-Introduction to NLP using Fastai.ipynb
@@ -765,11 +765,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since NLP models are more shallow in comparison to a computer vision model, the fine-tuning approaches need to be different and thus the paper provides novel fine-tuning techniques to do so:\n",
-    "\n",
+    "Since NLP models are more shallow in comparison to a computer vision model, the fine-tuning approaches need to be different and thus the paper provides novel fine-tuning techniques to do so:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Discriminative Fine-tuning\n",
-    "Since different layers of the model capture different types of information and thus they should be fine-tuned to different extents. This idea is same as the use of discriminative learning rates used in CV applications. \n",
-    "\n",
+    "Since different layers of the model capture different types of information and thus they should be fine-tuned to different extents. This idea is same as the use of discriminative learning rates used in CV applications. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Slanted Learning Rates\n",
     "The idea behing slanted learning rates is that for a pretrained language model to adpat/fine-tune itself to the downstream dataset, the fine-tuning process should ideally converge faster to asuitable region in the parameter space and thern refine its parameters there. \n",
     "\n",
@@ -778,9 +788,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "#### Creating a dataloader\n",
     "> Putting the pre-processed data in batches of text sequences for fine-tuning the language model"
@@ -788,9 +796,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Creating a dataloader for self-supervised learning task which tries to predict the next word in a sequence as represented by `text_` below. \n",
     "\n",
@@ -800,9 +806,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "dls_lm = DataBlock(\n",
@@ -815,9 +819,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "---\n",
     "***Note:*** An important trick used in creating a dataloader here is that we use all the data available to us i.e train and test data. In case we had a dataset with unlabeled reviews we could also use that to fine-tune the pre-trained model better since this step doesn't need labels and is self-supervised. \n",
@@ -828,9 +830,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -849,9 +849,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "---\n",
     "***Note:***\n",
@@ -865,9 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -914,9 +910,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Saving the dataloader for fast use in the future\n",
@@ -927,9 +921,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
