added minor changes to nlp post

--- a/_notebooks/2020-06-27-Introduction to NLP using Fastai.ipynb
+++ b/_notebooks/2020-06-27-Introduction to NLP using Fastai.ipynb
@@ -24,11 +24,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "#collapse-hide\n",
+    "\n",
+    "# Installing and importing the necessary libraries \n",
+    "!pip install fastai2 --quiet\n",
+    "!pip install kaggle --quiet\n",
+    "\n",
     "from fastai2.text.all import *\n",
     "\n",
     "import warnings\n",
@@ -50,12 +55,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dataset Download and  basic EDA"
+    "## Dataset Download and  basic EDA\n",
+    "> Using Kaggle API to download the competition dataset and view the data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ref                                                deadline             category            reward  teamCount  userHasEntered  \r\n",
+      "-------------------------------------------------  -------------------  ---------------  ---------  ---------  --------------  \r\n",
+      "nlp-getting-started                                2030-01-01 00:00:00  Getting Started      Kudos       1577            True  \r\n",
+      "trec-covid-information-retrieval                   2020-06-03 11:00:00  Research             Kudos         19           False  \r\n",
+      "google-quest-challenge                             2020-02-10 23:59:00  Featured           $25,000       1571           False  \r\n",
+      "jigsaw-unintended-bias-in-toxicity-classification  2019-07-18 19:35:00  Featured           $65,000       3165           False  \r\n",
+      "gendered-pronoun-resolution                        2019-04-22 23:59:00  Research           $25,000        838           False  \r\n",
+      "word2vec-nlp-tutorial                              2015-06-30 23:59:00  Getting Started  Knowledge        577           False  \r\n",
+      "data-science-for-good-city-of-los-angeles          2019-06-21 23:59:00  Analytics          $15,000          0           False  \r\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using the kaggle api to search the name of the competition dataset to download\n",
+    "!kaggle competitions list -s 'nlp'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The competition dataset we would like to download is the 1st one titled `nlp-getting-started`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -63,20 +102,65 @@
      "output_type": "stream",
      "text": [
       "/home/harish3110/Desktop/datasets\n",
-      "/home/harish3110/Desktop/datasets/nlp-getting-started\n"
+      "/home/harish3110/Desktop/datasets/nlp-getting-started\n",
+      "Downloading nlp-getting-started.zip to /home/harish3110/Desktop/datasets/nlp-getting-started\n",
+      "100%|████████████████████████████████████████| 593k/593k [00:00<00:00, 2.11MB/s]\n",
+      "100%|████████████████████████████████████████| 593k/593k [00:00<00:00, 2.10MB/s]\n"
      ]
     }
    ],
    "source": [
-    "#collapse-hide\n",
-    "\n",
     "%cd ~/Desktop/datasets\n",
     "dataset = 'nlp-getting-started'\n",
-    "# !mkdir {dataset}\n",
+    "\n",
+    "# Creating a folder for the dataset\n",
+    "!mkdir {dataset}\n",
     "%cd {dataset}\n",
-    "# !kaggle competitions download -c {dataset}\n",
-    "# !unzip {dataset + '.zip'}\n",
-    "# !rm {dataset + '.zip'} "
+    "\n",
+    "# Using the Kaggle API to download dataset\n",
+    "!kaggle competitions download -c {dataset}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Archive:  nlp-getting-started.zip\r\n",
+      "  inflating: sample_submission.csv   \r\n",
+      "  inflating: test.csv                \r\n",
+      "  inflating: train.csv               \r\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Unzip the dataset and delete the respective zip file\n",
+    "\n",
+    "!unzip {dataset + '.zip'}\n",
+    "!rm {dataset + '.zip'} "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sample_submission.csv  test.csv  train.csv\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "# View the files\n",
+    "\n",
+    "!ls"
    ]
   },
   {
