added minor changes to nlp post

--- a/_notebooks/2020-06-27-Introduction to NLP using Fastai.ipynb
+++ b/_notebooks/2020-06-27-Introduction to NLP using Fastai.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Introduction to NLP using Fastai\n",
-    "> Implementing the [ULMFiT](https://arxiv.org/abs/1801.06146) approach to train a language model on any downstream NLP task.\n",
+    "> Implementing and decoding the revolutionary [ULMFiT](https://arxiv.org/abs/1801.06146) approach to train a language model on any downstream NLP task.\n",
     "\n",
     "- toc: true\n",
     "- branch: master\n",
@@ -515,11 +515,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Universal Language Model Fine-tuning (ULMFiT) is an inductive transfer learning approach developed by Jeremy Howard and Sebastian Ruder in this [paper](https://arxiv.org/abs/1801.06146) to all the tasks in the domain of natural language processing which sparked the usage of transfer learning in the use of pretrained models and applying transfer learning in NLP tasks. \n",
+    "The Universal Language Model Fine-tuning (ULMFiT) is an inductive transfer learning approach developed by Jeremy Howard and Sebastian Ruder to all the tasks in the domain of natural language processing which sparked the usage of transfer learning in NLP tasks. \n",
     "\n",
     "**The ULMFiT approach to training NLP models is heralded as the ImageNet moment in the domain of Natural Language Processing** \n",
     "\n",
-    "The model architecture used in the entire process of the ULMFiT approach is the same and is the famous **AWD-LSTM** architecture. \n",
+    "The model architecture used in the entire process of the ULMFiT approach is ubiquitous and is the well-known **AWD-LSTM** architecture. \n",
     "\n",
     "The ULMFiT approach can be braodly explained in the 3 major steps as shown below:"
    ]
@@ -1372,7 +1372,7 @@
    "source": [
     "Since the model architecture for training and fine-tuning the language is that of an LSTM, the paper implements the backpropagation through time(BPTT) approach to be able propagate gradients without them exploding or vanishing. \n",
     "\n",
-    "In the ULMFiT approach, a modification to the traditional BPTT is made specifically in the fine-tuning classifier phase called **BPTT for Text Classification(BPT3C)** top make fine-tuning a classifier for large documents feasible. "
+    "In the ULMFiT approach, a modification to the traditional BPTT is made specifically in the fine-tuning classifier phase called **BPTT for Text Classification(BPT3C)** to make fine-tuning a classifier for large documents feasible. "
    ]
   },
   {
